samples/_failures_safe/1761512879_b334df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b22786e7.c: In function ‘main’:
./samples/SAFE/__tmp_b22786e7.c:143:9: error: expected expression at end of input
  143 |         for (size_t j = 0;
      |         ^~~
./samples/SAFE/__tmp_b22786e7.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b22786e7.c:143:9: error: expected declaration or statement at end of input
